Fixed Select All when rows are hidden.  Fixed overflow.

--- a/Server/wwwroot/css/site.css
+++ b/Server/wwwroot/css/site.css
@@ -66,6 +66,9 @@ h6 {
     padding: .5rem;
 }
 
+#tabContentWrapper {
+    overflow: auto;
+}
 
 #gridControlsWrapper {
     display: grid;
